--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Scrummy</string>
+    <string name="view_session">View Session</string>
+    <string name="load_session">Load Session</string>
 </resources>
