Added Plus Button functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="load_session">Load Session</string>
     <string name="start">Start</string>
     <string name="vote">Vote</string>
+    <string name="topic_entry">Topic Entry</string>
+    <string name="start_voting">Start Voting</string>
+    <string name="topic">Topic</string>
+    <string name="name">Name</string>
+    <string name="add">Add</string>
 </resources>
