--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="date">Date</string>
     <string name="colon">:</string>
     <string name="category">Category</string>
+    <string name="category_type">Category</string>
 </resources>
