--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="colon">:</string>
     <string name="category">Category</string>
     <string name="category_type">Category</string>
+    <string name="save_and_quit_button">Save and Quit</string>
 </resources>
