Fixes the persisting SharedPreferences issue even after completing a session. Adds the functionality of hiding the continue button if there are no sessions to continue. Adds "next: " to the topic button in SprintActivity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,7 @@
     <string name="save">Save</string>
     <string name="quit">Quit</string>
     <string name="delete">Delete</string>
+    <string name="next_topic_button">Next: </string>
+    <string name="new_dialogue_warning">There is currently a session in progress.  Would you like
+        to proceed anyway?</string>
 </resources>
