--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,6 @@
         to proceed anyway?</string>
     <string name="votes">Votes:</string>
     <string name="username">Name:</string>
+    <string name="delete">Delete</string>
+    <string name="rename">Rename</string>
 </resources>
