--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="votes">Votes:</string>
     <string name="username">Name:</string>
     <string name="rename">Rename</string>
+    <string name="previous_button">Previous</string>
 </resources>
