--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="dialog_warning_1">WARNING: There is currently a session in progress.</string>
     <string name="dialog_warning_2">Starting a new session will cause the prior session to be discarded.</string>
     <string name="dialog_new_name">Name the new session.</string>
+    <string name="dialog_rename">Rename the session.</string>
 </resources>
