Fixes the bug that would cause the topic dialog to disappear after checking for a blank title field. Minor adjustments to add_topic layout.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="fast_forward">Fast Forward</string>
     <string name="toggle_alarm">Toggle Alarm</string>
     <string name="dialog_new_name">Name the new session</string>
+    <string name="dialog_new_topic">New Topic</string>
 </resources>
