Added EditTopic dialog and 3-dot menu to topic_items in topic activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="toggle_alarm">Toggle Alarm</string>
     <string name="dialog_new_name">Name the new session</string>
     <string name="dialog_new_topic">New Topic</string>
+    <string name="edit">Edit</string>
 </resources>
