Disabled orientation change to fix bug causing data to be erased when orientation is changed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="sub_votes">-</string>
     <string name="topic_username">Username</string>
     <string name="new_session">New Session</string>
-    <string name="scrummy">Scrummy</string>
+    <string name="scrummy">Scrummy Retro</string>
     <string name="continue_session">Continue Session</string>
     <string name="current_topic">Current Topic</string>
     <string name="clock_goes_here">Clock Goes Here</string>
