Added menu to Main Activity that includes "About" and "Settings" buttons.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="dialog_new_name">Name the new session</string>
     <string name="dialog_new_topic">New Topic</string>
     <string name="edit">Edit</string>
+    <string name="about">About</string>
+    <string name="settings">Settings</string>
 </resources>
