--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Scrummy</string>
+    <string name="app_name">Scrummy Retro</string>
     <string name="view_session">View Session</string>
     <string name="load_session">Load Session</string>
     <string name="start_session">Start</string>
@@ -59,4 +59,5 @@
     <string name="edit">Edit</string>
     <string name="about">About</string>
     <string name="settings">Settings</string>
+    <string name="title_activity_settings">Settings</string>
 </resources>
