--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Scrummy Retro</string>
     <string name="view_session">View Session</string>
-    <string name="load_session">Load Session</string>
+    <string name="load_session">Load Saves</string>
     <string name="start_session">Start</string>
     <string name="vote_title">Vote</string>
     <string name="topic_entry">Topic Entry</string>
@@ -19,9 +19,9 @@
     <string name="add_votes">+</string>
     <string name="sub_votes">-</string>
     <string name="topic_username">Username</string>
-    <string name="new_session">New Session</string>
+    <string name="new_session">New</string>
     <string name="scrummy">Scrummy Retro</string>
-    <string name="continue_session">Continue Session</string>
+    <string name="continue_session">Continue</string>
     <string name="current_topic">Current Topic</string>
     <string name="clock_goes_here">Clock Goes Here</string>
     <string name="actions">Actions</string>
@@ -57,7 +57,13 @@
     <string name="dialog_new_name">Name the new session</string>
     <string name="dialog_new_topic">New Topic</string>
     <string name="edit">Edit</string>
+    <string name="title_activity_load">Load Saves</string>
+    <string name="title_activity_view">View Retrospective</string>
+    <string name="title_activity_vote">Vote</string>
+    <string name="title_activity_topic">Add Topics</string>
+    <string name="title_activity_sprint">Discuss</string>
     <string name="about">About</string>
+    <string name="title_activity_about">About</string>
     <string name="settings">Settings</string>
     <string name="title_activity_settings">Settings</string>
     <string name="timer_duration">Timer Duration</string>
@@ -196,4 +202,9 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+    <string name="brief_overview">Brief Overview</string>
+    <string name="contact_information">Contact Information</string>
+    <string name="description">Description</string>
+    <string name="logo_description">Picture of Scrummy Retro Logo</string>
+    <string name="scrummy_short_description">Scrum Retrospective Meeting Tool</string>
 </resources>
