Added About Activity and updated all Activity titles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,6 +158,15 @@
     <!-- Example settings for Data & Sync -->
     <string name="pref_header_data_sync">Data &amp; sync</string>
 
+    <string-array name="pref_sync_load_titles">
+        <item>Cloud</item>
+        <item>Local</item>
+    </string-array>
+    <string-array name="pref_sync_load_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
     <string name="pref_title_sync_frequency">Sync frequency</string>
     <string-array name="pref_sync_frequency_titles">
         <item>15 minutes</item>
