--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -230,6 +230,7 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="sign_out">Sign out</string>
     <string name="load_cloud">Cloud Data</string>
     <string name="load_local">Local Data</string>
 </resources>
