--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="topic_username">Username</string>
     <string name="new_session">New</string>
     <string name="scrummy">Scrummy Retro</string>
-    <string name="continue_session">Continue</string>
+    <string name="continue_session">Continue / Join</string>
     <string name="current_topic">Current Topic</string>
     <string name="clock_goes_here">Clock Goes Here</string>
     <string name="actions">Actions</string>
