--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -231,6 +231,11 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="register_info_text">(if there is no account registered with your group email,
+        an account will be automatically created for you)
+    </string>
+    <string name="error_no_internet">Internet connection is required to use this
+        application</string>
     <string name="sign_out">Sign out</string>
     <string name="load_cloud">Cloud Data</string>
     <string name="load_local">Local Data</string>
