--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -258,5 +258,5 @@
     <string name="help_run_meeting_4">The Discussion stage will display each topic one at a time starting with the one with the most votes. By default the timer is set to 5 minutes each topic, but the time can be edited while in this stage or in Settings under Timer. Notes from the discussion should be added to the textbox for each topic.</string>
     <string name="help">Help</string>
     <string name="copy_to_cloud">Copy to cloud</string>
-    <string name="copy_to_local">Copy to local</string>
+    <string name="copy_to_local">Copy to local device</string>
 </resources>
